--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <property name="java-output-path" value="/imersao-persistencia/target/classes"/>
-        <property name="context-root" value="cadastro"/>
+        <property name="context-root" value="imersao-persistencia"/>
     </wb-module>
 </project-modules>
